[package]
name = "variable"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
# name = "variable"
# path = "src/variable.rs"
# name = "num"
# path = "src/num.rs"
# name = "basic"
# path = "src/basic.rs"
# name = "expression"
# path = "src/expression.rs"
name = "function"
path = "src/function.rs"